--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,28 @@
     </properties>
 
     <dependencies>
+    
+    	<!-- Tema do Bootstrap -->
+    	<dependency>
+    		<groupId>org.primefaces.themes</groupId>
+    		<artifactId>bootstrap</artifactId>
+    		<version>1.0.10</version>
+    		<scope>compile</scope>
+    	</dependency>
+    
+		<!-- Usado para geração de arquivos Excel -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>3.11</version>
+		    <scope>compile</scope>
+		</dependency>
+    	
 		<!-- Implementacao do Bean Validation -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>5.0.1.Final</version>
+			<version>5.1.3.Final</version>
 			<scope>compile</scope>
 		</dependency>
     
@@ -23,7 +40,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.2.3.Final</version>
+			<version>4.3.8.Final</version>
 			<scope>compile</scope>
 		</dependency>
 		
@@ -31,15 +48,23 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.2.3.Final</version>
+			<version>4.3.8.Final</version>
 			<scope>compile</scope>
+		</dependency>
+		
+		<!-- Pool de conexoes com C3P0 -->
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-c3p0</artifactId>
+		    <version>4.3.8.Final</version>
+		    <scope>compile</scope>
 		</dependency>
 
 		<!-- Driver JDBC do MySQL -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.25</version>
+			<version>5.1.34</version>
 			<scope>compile</scope>
 		</dependency>
     
@@ -47,15 +72,23 @@
         <dependency>
             <groupId>org.jboss.weld.servlet</groupId>
             <artifactId>weld-servlet</artifactId>
-            <version>1.1.10.Final</version>
+            <version>2.2.9.Final</version>
             <scope>compile</scope>
         </dependency>
+        
+        <!-- Weld depende do Jandex -->
+		<dependency>
+			<groupId>org.jboss</groupId>
+		    <artifactId>jandex</artifactId>
+		    <version>1.2.2.Final</version>
+		    <scope>compile</scope>
+		</dependency>
     
         <!-- PrimeFaces (biblioteca de componentes) -->
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>3.5</version>
+            <version>5.1</version>
             <scope>compile</scope>
         </dependency>
         
@@ -63,7 +96,7 @@
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.faces</artifactId>
-            <version>2.1.21</version>
+            <version>2.2.9</version>
             <scope>compile</scope>
         </dependency>
         
@@ -71,7 +104,7 @@
 		<dependency>
 		    <groupId>org.omnifaces</groupId>
 		    <artifactId>omnifaces</artifactId>
-		    <version>1.5</version>
+		    <version>2.0</version>
 		    <scope>compile</scope>
 		</dependency>
         
@@ -135,19 +168,20 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>3.1.4.RELEASE</version>
+			<version>3.2.5.RELEASE</version>
 		</dependency> 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>3.1.4.RELEASE</version>
+			<version>3.2.5.RELEASE</version>
 		</dependency> 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>3.1.4.RELEASE</version>
+			<version>3.2.5.RELEASE</version>
 		</dependency>
 		
+		<!-- jasperreports -->
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
@@ -159,7 +193,7 @@
 		<dependency>
 	        <groupId>javax.servlet</groupId>
 	        <artifactId>javax.servlet-api</artifactId>
-	        <version>3.0.1</version>
+	        <version>3.1.0</version>
 	        <scope>provided</scope>
 		</dependency>
     </dependencies>
@@ -171,8 +205,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.0</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
